# KSC-Tools

./: .continueignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: security-audit.yml
bruno/: .env.example  KSC-Usage-API-examples-2025-11-26.bruno-collection.json  KSC-Usage-API-examples-2025-11-27.bruno-collection.json
bruno/KSC Usage API/: Claim a lock.bru  List all locks.bru  List specific lock(s).bru  Obtain an eKey.bru  Retrieve lock details.bru  Set lock status.bru  bruno.json  collection.bru
postman/: KSC-Usage-API-Env-examples-2025-11-26.postman_environment.json  KSC-Usage-API-Env-examples-2025-11-27.postman_environment.json  KSC-Usage-API-examples-2020-03-24.postman_collection.json  KSC-Usage-API-examples-2025-11-26.postman_collection.json  KSC-Usage-API-examples-2025-11-27.postman_collection.json
scripts/: .env.example  .gitignore  bad_code.py  decode-ble-lock-status.py  ksc-decode-lock-status.py  ksc-list-tenant-locks.py  ksc-set-locks-stored.py  ksc_api.py  requirements.txt
scripts/helpers/: utils.py
