[project]
name = "ksc-tools"
version = "0.1.0"
description = "Tools, hints and tips for working with the KeySafe-Cloud (KSC) API and compatible locks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "ty>=0.0.1a27",
]
