[project]
name = "ksc-tools"
version = "1.2.4"
license = "MIT"
description = "Tools, hints and tips for working with the KeySafe-Cloud (KSC) API and compatible locks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "ty>=0.0.1a27",
]

[tool.ruff]
src = ["scripts"]
include = ["pyroject.toml", "scripts/**/*.py"]
line-length = 100
target-version = "py312"
extend-exclude = ["bin"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # flake8-commas "Trailing comma missing"
    "D200",     # allow one-line docstring using multi-line
    "D203",     # "one-blank-line-before-class" conflicting with D211
    "D212",     # "multi-line-summary" conflicting with D213
    "G004",     # allow logging f-string (has performance trade-off)
    "INP",      # ignore flake8-no-pep420
    "TD002",    # allow missing-todo-author
    "TD003",    # allow missing-todo-link
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = [
    "S101",     # allow asserts
]

[tool.ty.environment]
root = ["scripts"]
